--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-parallax-tilt": "^1.7.151",
@@ -17,6 +18,9 @@
     "react-spinners": "^0.13.8",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
